k8s/admin-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
  namespace: contextiq
spec:
  selector:
    app: admin-portal
  ports:
    - name: http
      port:       80
      targetPort: 80
  type: ClusterIP
